# CVT

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_LICENSES  compileshaders.ps1  compileshaders.sh  cvt.ini  go
TestInputFiles/: 2dpatchy.patch  FK.sph  ball.rod  binary_n10000.sph  bondedspheres.bsph  crystallizing.sph  disks.dsk  fcc.sph  fluid.cub  janus.ptc  mgzn2.sph  particle.ajan  patchy.ptc  polydisperse.osph  sample.lammpstrj  sample.sph  sample.voro  sample1.rod  sample2.rod  sample_triclinic.lammpstrj  snap1.sph  snap3.sph  snap5.sph  snap7.sph  test.ajan  test.bonds  test.gon  test.jan  test.pat  test.pbp  test.pbpt  test2.ajan  testmov.dsk  tmp.rod  triangularprisms.voro
build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake
build-release/: CMakeCache.txt  Makefile  cmake_install.cmake
docs/: command-line-usage.md  file-formats.md  gui-usage.md
packaging/windows/: AppxManifest.template.xml  build-msix.ps1
packaging/windows/Assets/: README.md
shaders/: fs_instancing.sc  fs_picking.sc  fs_structure_factor.sc  fs_structure_factor_color.sc  varying.def.sc  vs_instancing.sc  vs_lines.sc  vs_picking.sc  vs_structure_factor.sc
src/: AnalysisSupport.cpp  AnalysisSupport.h  AppBootstrap.cpp  AppBootstrap.h  ArrowType.cpp  ArrowType.h  BondOrderScatter.cpp  BondOrderScatter.h  Box.cpp  Box.h  BxVec3Operators.h  ColorPalette.cpp  ColorPalette.h  CubeType.cpp  CubeType.h  CylinderType.cpp  CylinderType.h  ImGuiBgfx.cpp  ImGuiBgfx.h  ImGuiCompat.cpp  Log.h  Mesh.cpp  Mesh.h  MeshManager.cpp  MeshManager.h  OctahedronType.cpp  OctahedronType.h  Particle.h  ParticleSystem.cpp  ParticleSystem.h  ParticleType.cpp  ParticleType.h  PatchCapType.cpp  PatchCapType.h  PatchConeType.cpp  PatchConeType.h  PatchPlacement.cpp  PatchPlacement.h  PolygonType.cpp  PolygonType.h  (+27 more)
src/ParticleTypes/: Sphere.h
